--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,24 +17,30 @@
 } */
 
 @font-face {
-  font-family: "Pretendard";
+  font-family: "Pretendard-Regular";
   src: url("/public/fonts/Pretendard-Regular.woff2") format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Pretendard-Medium";
+  src: url("/public/fonts/Pretendard-Medium.woff2") format("woff");
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
-  font-family: "Pretendard";
+  font-family: "Pretendard-SemiBold";
   src: url("/public/fonts/Pretendard-SemiBold.woff2") format("woff");
   font-weight: 600;
   font-style: normal;
 }
 @font-face {
-  font-family: "Pretendard";
-  src: url("/public/fonts/Pretendard-e.woff2") format("woff");
-  font-weight: 800;
+  font-family: "Pretendard-Light";
+  src: url("/public/fonts/Pretendard-Light.woff2") format("woff");
+  font-weight: 300;
   font-style: normal;
 }
 
 body {
-  font-family: "Pretendard-Regular", sans-serif;
+  font-family: "pretendard";
 }
