--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,31 +18,31 @@
 
 @font-face {
   font-family: "Pretendard-Regular";
-  src: url("/fonts/Pretendard-Regular.woff2") format("woff2");
+  src: url("/fonts/Pretendard-Regular.otf") format("otf");
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: "Pretendard-Medium";
-  src: url("/fonts/Pretendard-Medium.woff2") format("woff2");
+  src: url("/fonts/Pretendard-Medium.otf") format("otf");
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
   font-family: "Pretendard-SemiBold";
-  src: url("/fonts/Pretendard-SemiBold.woff2") format("woff2");
+  src: url("/fonts/Pretendard-SemiBold.otf") format("otf");
   font-weight: 600;
   font-style: normal;
 }
 @font-face {
   font-family: "Pretendard-Light";
-  src: url("/fonts/Pretendard-Light.woff2") format("woff2");
+  src: url("/fonts/Pretendard-Light.otf") format("otf");
   font-weight: 300;
   font-style: normal;
 }
 
 body {
-  font-family: "pretendard";
+  font-family: "Pretendard-Regular";
   padding: 0;
   margin: 0;
   height: 100%;
